# CMake_template

./: .clang-format  .clang-tidy  .cmake-format.yaml  CMakeLists.txt  README.md
cmake_includes/: CompilerWarnings.cmake  Conan.cmake  DefineProjectOnce.cmake  Standalone.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  main.cpp
